@@ -14,6 +14,9 @@ TODO: AnyEvent::Handle with AnyEvent::IO?
 TODO: invalid. and localhost. specialcasing inside AEDNS and not AESocket (rfc6761)
 TODO: maybe implement env variable to give hosts precedence
 
+        - work around a newly introduced bug in Socket 2.011 (an
+          errornous sun_length check) (analyzed by Maxime Soulé).
+
 7.07 Tue Dec 17 17:45:02 CET 2013
 	- the documentation for custom tls verify schemes was wrong. make it agree
           with the code (reported by Maxime Soulé).
